// Vitest Snapshot v1

exports[`@tracespace/cli render > should render pads/circle.gbr > parse 1`] = `
{
  "children": [
    {
      "format": [
        3,
        4,
      ],
      "mode": "absolute",
      "position": {
        "end": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "start": {
          "column": 2,
          "line": 1,
          "offset": 1,
        },
      },
      "type": "coordinateFormat",
      "zeroSuppression": "leading",
    },
    {
      "position": {
        "end": {
          "column": 6,
          "line": 2,
          "offset": 19,
        },
        "start": {
          "column": 2,
          "line": 2,
          "offset": 15,
        },
      },
      "type": "units",
      "units": "in",
    },
    {
      "code": "10",
      "hole": null,
      "position": {
        "end": {
          "column": 12,
          "line": 3,
          "offset": 33,
        },
        "start": {
          "column": 2,
          "line": 3,
          "offset": 23,
        },
      },
      "shape": {
        "diameter": 0.5,
        "type": "circle",
      },
      "type": "toolDefinition",
    },
    {
      "code": "10",
      "position": {
        "end": {
          "column": 4,
          "line": 4,
          "offset": 39,
        },
        "start": {
          "column": 1,
          "line": 4,
          "offset": 36,
        },
      },
      "type": "toolChange",
    },
    {
      "coordinates": {
        "x": "0",
        "y": "0",
      },
      "graphic": "shape",
      "position": {
        "end": {
          "column": 8,
          "line": 5,
          "offset": 48,
        },
        "start": {
          "column": 1,
          "line": 5,
          "offset": 41,
        },
      },
      "type": "graphic",
    },
    {
      "position": {
        "end": {
          "column": 4,
          "line": 6,
          "offset": 53,
        },
        "start": {
          "column": 1,
          "line": 6,
          "offset": 50,
        },
      },
      "type": "done",
    },
  ],
  "filetype": "gerber",
  "type": "root",
}
`;

exports[`@tracespace/cli render > should render pads/circle.gbr > plot 1`] = `
{
  "children": [
    {
      "children": [
        {
          "shape": {
            "cx": 0,
            "cy": 0,
            "r": 0.25,
            "type": "circle",
          },
          "type": "imageShape",
        },
      ],
      "size": [
        -0.25,
        -0.25,
        0.25,
        0.25,
      ],
      "type": "imageLayer",
    },
  ],
  "type": "image",
  "units": "in",
}
`;

exports[`@tracespace/cli render > should render pads/circle.gbr > render 1`] = `"<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"0\\" fill-rule=\\"evenodd\\" fill=\\"currentColor\\" stroke=\\"currentColor\\" width=\\"0.5in\\" height=\\"0.5in\\" viewBox=\\"-0.25 -0.25 0.5 0.5\\"><g transform=\\"translate(0, 0) scale(1,-1)\\"><circle cx=\\"0\\" cy=\\"0\\" r=\\"0.25\\"></circle></g></svg>"`;

exports[`@tracespace/cli render > should render pads/obround.gbr > parse 1`] = `
{
  "children": [
    {
      "format": [
        3,
        4,
      ],
      "mode": "absolute",
      "position": {
        "end": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "start": {
          "column": 2,
          "line": 1,
          "offset": 1,
        },
      },
      "type": "coordinateFormat",
      "zeroSuppression": "leading",
    },
    {
      "position": {
        "end": {
          "column": 6,
          "line": 2,
          "offset": 19,
        },
        "start": {
          "column": 2,
          "line": 2,
          "offset": 15,
        },
      },
      "type": "units",
      "units": "in",
    },
    {
      "code": "10",
      "hole": null,
      "position": {
        "end": {
          "column": 16,
          "line": 3,
          "offset": 37,
        },
        "start": {
          "column": 2,
          "line": 3,
          "offset": 23,
        },
      },
      "shape": {
        "type": "obround",
        "xSize": 1,
        "ySize": 0.5,
      },
      "type": "toolDefinition",
    },
    {
      "code": "10",
      "position": {
        "end": {
          "column": 4,
          "line": 4,
          "offset": 43,
        },
        "start": {
          "column": 1,
          "line": 4,
          "offset": 40,
        },
      },
      "type": "toolChange",
    },
    {
      "coordinates": {
        "x": "0",
        "y": "0",
      },
      "graphic": "shape",
      "position": {
        "end": {
          "column": 8,
          "line": 5,
          "offset": 52,
        },
        "start": {
          "column": 1,
          "line": 5,
          "offset": 45,
        },
      },
      "type": "graphic",
    },
    {
      "position": {
        "end": {
          "column": 4,
          "line": 6,
          "offset": 57,
        },
        "start": {
          "column": 1,
          "line": 6,
          "offset": 54,
        },
      },
      "type": "done",
    },
  ],
  "filetype": "gerber",
  "type": "root",
}
`;

exports[`@tracespace/cli render > should render pads/obround.gbr > plot 1`] = `
{
  "children": [
    {
      "children": [
        {
          "shape": {
            "r": 0.25,
            "type": "rectangle",
            "x": -0.5,
            "xSize": 1,
            "y": -0.25,
            "ySize": 0.5,
          },
          "type": "imageShape",
        },
      ],
      "size": [
        -0.5,
        -0.25,
        0.5,
        0.25,
      ],
      "type": "imageLayer",
    },
  ],
  "type": "image",
  "units": "in",
}
`;

exports[`@tracespace/cli render > should render pads/obround.gbr > render 1`] = `"<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"0\\" fill-rule=\\"evenodd\\" fill=\\"currentColor\\" stroke=\\"currentColor\\" width=\\"1in\\" height=\\"0.5in\\" viewBox=\\"-0.5 -0.25 1 0.5\\"><g transform=\\"translate(0, 0) scale(1,-1)\\"><rect x=\\"-0.5\\" y=\\"-0.25\\" width=\\"1\\" height=\\"0.5\\" rx=\\"0.25\\" ry=\\"0.25\\"></rect></g></svg>"`;

exports[`@tracespace/cli render > should render pads/polygon.gbr > parse 1`] = `
{
  "children": [
    {
      "format": [
        3,
        4,
      ],
      "mode": "absolute",
      "position": {
        "end": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "start": {
          "column": 2,
          "line": 1,
          "offset": 1,
        },
      },
      "type": "coordinateFormat",
      "zeroSuppression": "leading",
    },
    {
      "position": {
        "end": {
          "column": 6,
          "line": 2,
          "offset": 19,
        },
        "start": {
          "column": 2,
          "line": 2,
          "offset": 15,
        },
      },
      "type": "units",
      "units": "in",
    },
    {
      "code": "10",
      "hole": null,
      "position": {
        "end": {
          "column": 14,
          "line": 3,
          "offset": 35,
        },
        "start": {
          "column": 2,
          "line": 3,
          "offset": 23,
        },
      },
      "shape": {
        "diameter": 0.5,
        "rotation": null,
        "type": "polygon",
        "vertices": 3,
      },
      "type": "toolDefinition",
    },
    {
      "code": "11",
      "hole": null,
      "position": {
        "end": {
          "column": 14,
          "line": 4,
          "offset": 51,
        },
        "start": {
          "column": 2,
          "line": 4,
          "offset": 39,
        },
      },
      "shape": {
        "diameter": 0.5,
        "rotation": null,
        "type": "polygon",
        "vertices": 4,
      },
      "type": "toolDefinition",
    },
    {
      "code": "12",
      "hole": null,
      "position": {
        "end": {
          "column": 14,
          "line": 5,
          "offset": 67,
        },
        "start": {
          "column": 2,
          "line": 5,
          "offset": 55,
        },
      },
      "shape": {
        "diameter": 0.5,
        "rotation": null,
        "type": "polygon",
        "vertices": 5,
      },
      "type": "toolDefinition",
    },
    {
      "code": "13",
      "hole": null,
      "position": {
        "end": {
          "column": 14,
          "line": 6,
          "offset": 83,
        },
        "start": {
          "column": 2,
          "line": 6,
          "offset": 71,
        },
      },
      "shape": {
        "diameter": 0.5,
        "rotation": null,
        "type": "polygon",
        "vertices": 6,
      },
      "type": "toolDefinition",
    },
    {
      "code": "14",
      "hole": null,
      "position": {
        "end": {
          "column": 14,
          "line": 7,
          "offset": 99,
        },
        "start": {
          "column": 2,
          "line": 7,
          "offset": 87,
        },
      },
      "shape": {
        "diameter": 0.5,
        "rotation": null,
        "type": "polygon",
        "vertices": 7,
      },
      "type": "toolDefinition",
    },
    {
      "code": "15",
      "hole": null,
      "position": {
        "end": {
          "column": 14,
          "line": 8,
          "offset": 115,
        },
        "start": {
          "column": 2,
          "line": 8,
          "offset": 103,
        },
      },
      "shape": {
        "diameter": 0.5,
        "rotation": null,
        "type": "polygon",
        "vertices": 8,
      },
      "type": "toolDefinition",
    },
    {
      "code": "16",
      "hole": null,
      "position": {
        "end": {
          "column": 14,
          "line": 9,
          "offset": 131,
        },
        "start": {
          "column": 2,
          "line": 9,
          "offset": 119,
        },
      },
      "shape": {
        "diameter": 0.5,
        "rotation": null,
        "type": "polygon",
        "vertices": 9,
      },
      "type": "toolDefinition",
    },
    {
      "code": "17",
      "hole": null,
      "position": {
        "end": {
          "column": 15,
          "line": 10,
          "offset": 148,
        },
        "start": {
          "column": 2,
          "line": 10,
          "offset": 135,
        },
      },
      "shape": {
        "diameter": 0.5,
        "rotation": null,
        "type": "polygon",
        "vertices": 10,
      },
      "type": "toolDefinition",
    },
    {
      "code": "18",
      "hole": null,
      "position": {
        "end": {
          "column": 15,
          "line": 11,
          "offset": 165,
        },
        "start": {
          "column": 2,
          "line": 11,
          "offset": 152,
        },
      },
      "shape": {
        "diameter": 0.5,
        "rotation": null,
        "type": "polygon",
        "vertices": 11,
      },
      "type": "toolDefinition",
    },
    {
      "code": "19",
      "hole": null,
      "position": {
        "end": {
          "column": 15,
          "line": 12,
          "offset": 182,
        },
        "start": {
          "column": 2,
          "line": 12,
          "offset": 169,
        },
      },
      "shape": {
        "diameter": 0.5,
        "rotation": null,
        "type": "polygon",
        "vertices": 12,
      },
      "type": "toolDefinition",
    },
    {
      "code": "10",
      "position": {
        "end": {
          "column": 4,
          "line": 13,
          "offset": 188,
        },
        "start": {
          "column": 1,
          "line": 13,
          "offset": 185,
        },
      },
      "type": "toolChange",
    },
    {
      "coordinates": {
        "x": "0",
        "y": "0",
      },
      "graphic": "shape",
      "position": {
        "end": {
          "column": 8,
          "line": 14,
          "offset": 197,
        },
        "start": {
          "column": 1,
          "line": 14,
          "offset": 190,
        },
      },
      "type": "graphic",
    },
    {
      "code": "11",
      "position": {
        "end": {
          "column": 4,
          "line": 15,
          "offset": 202,
        },
        "start": {
          "column": 1,
          "line": 15,
          "offset": 199,
        },
      },
      "type": "toolChange",
    },
    {
      "coordinates": {
        "x": "0",
        "y": "6000",
      },
      "graphic": "shape",
      "position": {
        "end": {
          "column": 11,
          "line": 16,
          "offset": 214,
        },
        "start": {
          "column": 1,
          "line": 16,
          "offset": 204,
        },
      },
      "type": "graphic",
    },
    {
      "code": "12",
      "position": {
        "end": {
          "column": 4,
          "line": 17,
          "offset": 219,
        },
        "start": {
          "column": 1,
          "line": 17,
          "offset": 216,
        },
      },
      "type": "toolChange",
    },
    {
      "coordinates": {
        "x": "0",
        "y": "12000",
      },
      "graphic": "shape",
      "position": {
        "end": {
          "column": 12,
          "line": 18,
          "offset": 232,
        },
        "start": {
          "column": 1,
          "line": 18,
          "offset": 221,
        },
      },
      "type": "graphic",
    },
    {
      "code": "13",
      "position": {
        "end": {
          "column": 4,
          "line": 19,
          "offset": 237,
        },
        "start": {
          "column": 1,
          "line": 19,
          "offset": 234,
        },
      },
      "type": "toolChange",
    },
    {
      "coordinates": {
        "x": "0",
        "y": "18000",
      },
      "graphic": "shape",
      "position": {
        "end": {
          "column": 12,
          "line": 20,
          "offset": 250,
        },
        "start": {
          "column": 1,
          "line": 20,
          "offset": 239,
        },
      },
      "type": "graphic",
    },
    {
      "code": "14",
      "position": {
        "end": {
          "column": 4,
          "line": 21,
          "offset": 255,
        },
        "start": {
          "column": 1,
          "line": 21,
          "offset": 252,
        },
      },
      "type": "toolChange",
    },
    {
      "coordinates": {
        "x": "0",
        "y": "24000",
      },
      "graphic": "shape",
      "position": {
        "end": {
          "column": 12,
          "line": 22,
          "offset": 268,
        },
        "start": {
          "column": 1,
          "line": 22,
          "offset": 257,
        },
      },
      "type": "graphic",
    },
    {
      "code": "15",
      "position": {
        "end": {
          "column": 4,
          "line": 23,
          "offset": 273,
        },
        "start": {
          "column": 1,
          "line": 23,
          "offset": 270,
        },
      },
      "type": "toolChange",
    },
    {
      "coordinates": {
        "x": "0",
        "y": "30000",
      },
      "graphic": "shape",
      "position": {
        "end": {
          "column": 12,
          "line": 24,
          "offset": 286,
        },
        "start": {
          "column": 1,
          "line": 24,
          "offset": 275,
        },
      },
      "type": "graphic",
    },
    {
      "code": "16",
      "position": {
        "end": {
          "column": 4,
          "line": 25,
          "offset": 291,
        },
        "start": {
          "column": 1,
          "line": 25,
          "offset": 288,
        },
      },
      "type": "toolChange",
    },
    {
      "coordinates": {
        "x": "0",
        "y": "36000",
      },
      "graphic": "shape",
      "position": {
        "end": {
          "column": 12,
          "line": 26,
          "offset": 304,
        },
        "start": {
          "column": 1,
          "line": 26,
          "offset": 293,
        },
      },
      "type": "graphic",
    },
    {
      "code": "17",
      "position": {
        "end": {
          "column": 4,
          "line": 27,
          "offset": 309,
        },
        "start": {
          "column": 1,
          "line": 27,
          "offset": 306,
        },
      },
      "type": "toolChange",
    },
    {
      "coordinates": {
        "x": "0",
        "y": "42000",
      },
      "graphic": "shape",
      "position": {
        "end": {
          "column": 12,
          "line": 28,
          "offset": 322,
        },
        "start": {
          "column": 1,
          "line": 28,
          "offset": 311,
        },
      },
      "type": "graphic",
    },
    {
      "code": "18",
      "position": {
        "end": {
          "column": 4,
          "line": 29,
          "offset": 327,
        },
        "start": {
          "column": 1,
          "line": 29,
          "offset": 324,
        },
      },
      "type": "toolChange",
    },
    {
      "coordinates": {
        "x": "0",
        "y": "48000",
      },
      "graphic": "shape",
      "position": {
        "end": {
          "column": 12,
          "line": 30,
          "offset": 340,
        },
        "start": {
          "column": 1,
          "line": 30,
          "offset": 329,
        },
      },
      "type": "graphic",
    },
    {
      "code": "19",
      "position": {
        "end": {
          "column": 4,
          "line": 31,
          "offset": 345,
        },
        "start": {
          "column": 1,
          "line": 31,
          "offset": 342,
        },
      },
      "type": "toolChange",
    },
    {
      "coordinates": {
        "x": "0",
        "y": "54000",
      },
      "graphic": "shape",
      "position": {
        "end": {
          "column": 12,
          "line": 32,
          "offset": 358,
        },
        "start": {
          "column": 1,
          "line": 32,
          "offset": 347,
        },
      },
      "type": "graphic",
    },
    {
      "position": {
        "end": {
          "column": 4,
          "line": 33,
          "offset": 363,
        },
        "start": {
          "column": 1,
          "line": 33,
          "offset": 360,
        },
      },
      "type": "done",
    },
  ],
  "filetype": "gerber",
  "type": "root",
}
`;

exports[`@tracespace/cli render > should render pads/polygon.gbr > plot 1`] = `
{
  "children": [
    {
      "children": [
        {
          "shape": {
            "points": [
              [
                0.25,
                0,
              ],
              [
                -0.12499999999999994,
                0.21650635094610968,
              ],
              [
                -0.1250000000000001,
                -0.21650635094610962,
              ],
            ],
            "type": "polygon",
          },
          "type": "imageShape",
        },
        {
          "shape": {
            "points": [
              [
                0.25,
                0.6,
              ],
              [
                1.5308084989341915e-17,
                0.85,
              ],
              [
                -0.25,
                0.6,
              ],
              [
                -4.592425496802574e-17,
                0.35,
              ],
            ],
            "type": "polygon",
          },
          "type": "imageShape",
        },
        {
          "shape": {
            "points": [
              [
                0.25,
                1.2,
              ],
              [
                0.07725424859373686,
                1.4377641290737884,
              ],
              [
                -0.20225424859373684,
                1.3469463130731183,
              ],
              [
                -0.20225424859373686,
                1.0530536869268816,
              ],
              [
                0.07725424859373681,
                0.9622358709262115,
              ],
            ],
            "type": "polygon",
          },
          "type": "imageShape",
        },
        {
          "shape": {
            "points": [
              [
                0.25,
                1.8,
              ],
              [
                0.12500000000000003,
                2.0165063509461096,
              ],
              [
                -0.12499999999999994,
                2.0165063509461096,
              ],
              [
                -0.25,
                1.8,
              ],
              [
                -0.1250000000000001,
                1.5834936490538905,
              ],
              [
                0.12499999999999983,
                1.5834936490538902,
              ],
            ],
            "type": "polygon",
          },
          "type": "imageShape",
        },
        {
          "shape": {
            "points": [
              [
                0.25,
                2.4,
              ],
              [
                0.1558724504646834,
                2.5954578706170075,
              ],
              [
                -0.055630233489078584,
                2.643731978045456,
              ],
              [
                -0.22524221697560476,
                2.5084709347793894,
              ],
              [
                -0.2252422169756048,
                2.2915290652206104,
              ],
              [
                -0.05563023348907865,
                2.156268021954544,
              ],
              [
                0.15587245046468334,
                2.2045421293829923,
              ],
            ],
            "type": "polygon",
          },
          "type": "imageShape",
        },
        {
          "shape": {
            "points": [
              [
                0.25,
                3,
              ],
              [
                0.1767766952966369,
                3.176776695296637,
              ],
              [
                1.5308084989341915e-17,
                3.25,
              ],
              [
                -0.17677669529663687,
                3.176776695296637,
              ],
              [
                -0.25,
                3,
              ],
              [
                -0.17677669529663692,
                2.823223304703363,
              ],
              [
                -4.592425496802574e-17,
                2.75,
              ],
              [
                0.17677669529663684,
                2.823223304703363,
              ],
            ],
            "type": "polygon",
          },
          "type": "imageShape",
        },
        {
          "shape": {
            "points": [
              [
                0.25,
                3.6,
              ],
              [
                0.1915111107797445,
                3.760696902421635,
              ],
              [
                0.043412044416732604,
                3.846201938253052,
              ],
              [
                -0.12499999999999994,
                3.81650635094611,
              ],
              [
                -0.23492315519647708,
                3.6855050358314174,
              ],
              [
                -0.2349231551964771,
                3.5144949641685828,
              ],
              [
                -0.1250000000000001,
                3.3834936490538903,
              ],
              [
                0.04341204441673249,
                3.3537980617469483,
              ],
              [
                0.19151111077974445,
                3.439303097578365,
              ],
            ],
            "type": "polygon",
          },
          "type": "imageShape",
        },
        {
          "shape": {
            "points": [
              [
                0.25,
                4.2,
              ],
              [
                0.20225424859373686,
                4.3469463130731185,
              ],
              [
                0.07725424859373686,
                4.437764129073789,
              ],
              [
                -0.07725424859373684,
                4.437764129073789,
              ],
              [
                -0.20225424859373684,
                4.3469463130731185,
              ],
              [
                -0.25,
                4.2,
              ],
              [
                -0.20225424859373686,
                4.053053686926882,
              ],
              [
                -0.07725424859373689,
                3.9622358709262118,
              ],
              [
                0.07725424859373681,
                3.9622358709262118,
              ],
              [
                0.20225424859373684,
                4.053053686926882,
              ],
            ],
            "type": "polygon",
          },
          "type": "imageShape",
        },
        {
          "shape": {
            "points": [
              [
                0.25,
                4.8,
              ],
              [
                0.2103133832077953,
                4.935160204363899,
              ],
              [
                0.10385375325047161,
                5.02740799883863,
              ],
              [
                -0.03557870956832125,
                5.047455360470233,
              ],
              [
                -0.16371518348632125,
                4.988937393588564,
              ],
              [
                -0.23987324340362434,
                4.870433139210357,
              ],
              [
                -0.23987324340362437,
                4.729566860789642,
              ],
              [
                -0.1637151834863213,
                4.611062606411435,
              ],
              [
                -0.03557870956832131,
                4.552544639529767,
              ],
              [
                0.10385375325047151,
                4.57259200116137,
              ],
              [
                0.2103133832077953,
                4.664839795636101,
              ],
            ],
            "type": "polygon",
          },
          "type": "imageShape",
        },
        {
          "shape": {
            "points": [
              [
                0.25,
                5.4,
              ],
              [
                0.21650635094610968,
                5.525,
              ],
              [
                0.12500000000000003,
                5.61650635094611,
              ],
              [
                1.5308084989341915e-17,
                5.65,
              ],
              [
                -0.12499999999999994,
                5.61650635094611,
              ],
              [
                -0.21650635094610962,
                5.525,
              ],
              [
                -0.25,
                5.4,
              ],
              [
                -0.2165063509461097,
                5.275,
              ],
              [
                -0.1250000000000001,
                5.183493649053891,
              ],
              [
                -4.592425496802574e-17,
                5.15,
              ],
              [
                0.12499999999999983,
                5.183493649053891,
              ],
              [
                0.2165063509461096,
                5.275,
              ],
            ],
            "type": "polygon",
          },
          "type": "imageShape",
        },
      ],
      "size": [
        -0.25,
        -0.21650635094610962,
        0.25,
        5.65,
      ],
      "type": "imageLayer",
    },
  ],
  "type": "image",
  "units": "in",
}
`;

exports[`@tracespace/cli render > should render pads/polygon.gbr > render 1`] = `"<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"0\\" fill-rule=\\"evenodd\\" fill=\\"currentColor\\" stroke=\\"currentColor\\" width=\\"0.5in\\" height=\\"5.86650635094611in\\" viewBox=\\"-0.25 -0.21650635094610962 0.5 5.86650635094611\\"><g transform=\\"translate(0, 5.43349364905389) scale(1,-1)\\"><polygon points=\\"0.25,0 -0.12499999999999994,0.21650635094610968 -0.1250000000000001,-0.21650635094610962\\"></polygon><polygon points=\\"0.25,0.6 1.5308084989341915e-17,0.85 -0.25,0.6 -4.592425496802574e-17,0.35\\"></polygon><polygon points=\\"0.25,1.2 0.07725424859373686,1.4377641290737884 -0.20225424859373684,1.3469463130731183 -0.20225424859373686,1.0530536869268816 0.07725424859373681,0.9622358709262115\\"></polygon><polygon points=\\"0.25,1.8 0.12500000000000003,2.0165063509461096 -0.12499999999999994,2.0165063509461096 -0.25,1.8 -0.1250000000000001,1.5834936490538905 0.12499999999999983,1.5834936490538902\\"></polygon><polygon points=\\"0.25,2.4 0.1558724504646834,2.5954578706170075 -0.055630233489078584,2.643731978045456 -0.22524221697560476,2.5084709347793894 -0.2252422169756048,2.2915290652206104 -0.05563023348907865,2.156268021954544 0.15587245046468334,2.2045421293829923\\"></polygon><polygon points=\\"0.25,3 0.1767766952966369,3.176776695296637 1.5308084989341915e-17,3.25 -0.17677669529663687,3.176776695296637 -0.25,3 -0.17677669529663692,2.823223304703363 -4.592425496802574e-17,2.75 0.17677669529663684,2.823223304703363\\"></polygon><polygon points=\\"0.25,3.6 0.1915111107797445,3.760696902421635 0.043412044416732604,3.846201938253052 -0.12499999999999994,3.81650635094611 -0.23492315519647708,3.6855050358314174 -0.2349231551964771,3.5144949641685828 -0.1250000000000001,3.3834936490538903 0.04341204441673249,3.3537980617469483 0.19151111077974445,3.439303097578365\\"></polygon><polygon points=\\"0.25,4.2 0.20225424859373686,4.3469463130731185 0.07725424859373686,4.437764129073789 -0.07725424859373684,4.437764129073789 -0.20225424859373684,4.3469463130731185 -0.25,4.2 -0.20225424859373686,4.053053686926882 -0.07725424859373689,3.9622358709262118 0.07725424859373681,3.9622358709262118 0.20225424859373684,4.053053686926882\\"></polygon><polygon points=\\"0.25,4.8 0.2103133832077953,4.935160204363899 0.10385375325047161,5.02740799883863 -0.03557870956832125,5.047455360470233 -0.16371518348632125,4.988937393588564 -0.23987324340362434,4.870433139210357 -0.23987324340362437,4.729566860789642 -0.1637151834863213,4.611062606411435 -0.03557870956832131,4.552544639529767 0.10385375325047151,4.57259200116137 0.2103133832077953,4.664839795636101\\"></polygon><polygon points=\\"0.25,5.4 0.21650635094610968,5.525 0.12500000000000003,5.61650635094611 1.5308084989341915e-17,5.65 -0.12499999999999994,5.61650635094611 -0.21650635094610962,5.525 -0.25,5.4 -0.2165063509461097,5.275 -0.1250000000000001,5.183493649053891 -4.592425496802574e-17,5.15 0.12499999999999983,5.183493649053891 0.2165063509461096,5.275\\"></polygon></g></svg>"`;

exports[`@tracespace/cli render > should render pads/rectangle.gbr > parse 1`] = `
{
  "children": [
    {
      "format": [
        3,
        4,
      ],
      "mode": "absolute",
      "position": {
        "end": {
          "column": 12,
          "line": 1,
          "offset": 11,
        },
        "start": {
          "column": 2,
          "line": 1,
          "offset": 1,
        },
      },
      "type": "coordinateFormat",
      "zeroSuppression": "leading",
    },
    {
      "position": {
        "end": {
          "column": 6,
          "line": 2,
          "offset": 19,
        },
        "start": {
          "column": 2,
          "line": 2,
          "offset": 15,
        },
      },
      "type": "units",
      "units": "in",
    },
    {
      "code": "10",
      "hole": null,
      "position": {
        "end": {
          "column": 16,
          "line": 3,
          "offset": 37,
        },
        "start": {
          "column": 2,
          "line": 3,
          "offset": 23,
        },
      },
      "shape": {
        "type": "rectangle",
        "xSize": 1,
        "ySize": 0.5,
      },
      "type": "toolDefinition",
    },
    {
      "code": "10",
      "position": {
        "end": {
          "column": 4,
          "line": 4,
          "offset": 43,
        },
        "start": {
          "column": 1,
          "line": 4,
          "offset": 40,
        },
      },
      "type": "toolChange",
    },
    {
      "coordinates": {
        "x": "0",
        "y": "0",
      },
      "graphic": "shape",
      "position": {
        "end": {
          "column": 8,
          "line": 5,
          "offset": 52,
        },
        "start": {
          "column": 1,
          "line": 5,
          "offset": 45,
        },
      },
      "type": "graphic",
    },
    {
      "position": {
        "end": {
          "column": 4,
          "line": 6,
          "offset": 57,
        },
        "start": {
          "column": 1,
          "line": 6,
          "offset": 54,
        },
      },
      "type": "done",
    },
  ],
  "filetype": "gerber",
  "type": "root",
}
`;

exports[`@tracespace/cli render > should render pads/rectangle.gbr > plot 1`] = `
{
  "children": [
    {
      "children": [
        {
          "shape": {
            "type": "rectangle",
            "x": -0.5,
            "xSize": 1,
            "y": -0.25,
            "ySize": 0.5,
          },
          "type": "imageShape",
        },
      ],
      "size": [
        -0.5,
        -0.25,
        0.5,
        0.25,
      ],
      "type": "imageLayer",
    },
  ],
  "type": "image",
  "units": "in",
}
`;

exports[`@tracespace/cli render > should render pads/rectangle.gbr > render 1`] = `"<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" stroke-linecap=\\"round\\" stroke-linejoin=\\"round\\" stroke-width=\\"0\\" fill-rule=\\"evenodd\\" fill=\\"currentColor\\" stroke=\\"currentColor\\" width=\\"1in\\" height=\\"0.5in\\" viewBox=\\"-0.5 -0.25 1 0.5\\"><g transform=\\"translate(0, 0) scale(1,-1)\\"><rect x=\\"-0.5\\" y=\\"-0.25\\" width=\\"1\\" height=\\"0.5\\"></rect></g></svg>"`;
